--- a/weather.css
+++ b/weather.css
@@ -6,7 +6,9 @@
 .container{
     width: 100%;
     height: 100vh;
-   background-color: #222;
+    background: url(img/neon.jpg)
+    background-size: cover;
+    background-position: center;
     position: relative;
     display: flex;
     align-items: center;
