--- a/weather.css
+++ b/weather.css
@@ -6,7 +6,7 @@
 .container{
     width: 100%;
     height: 100vh;
-    background: url(img/neon.jpg)
+    background: url(img/neon.jpg);
     background-size: cover;
     background-position: center;
     position: relative;
